[gd_scene load_steps=3 format=3 uid="uid://dx7dlpqxrx86r"]

[ext_resource type="Script" path="res://autoload/keyboard/text_input.gd" id="1_ohddq"]
[ext_resource type="PackedScene" uid="uid://dpipess7ylbt" path="res://components/button/button.tscn" id="2_sm133"]

[node name="TextInput" type="Window"]
position = Vector2i(100, 100)
size = Vector2i(500, 500)
borderless = true
always_on_top = true
script = ExtResource("1_ohddq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Input" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="CancelButton" parent="VBoxContainer/HBoxContainer" instance=ExtResource("2_sm133")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[node name="DoneButton" parent="VBoxContainer/HBoxContainer" instance=ExtResource("2_sm133")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Done"
